--- a/about.html
+++ b/about.html
@@ -1,9 +1,39 @@
 ---
 layout: page
 title: "O souboru"
-description: "Stručná historie času"
+description: "Ochotnický spolek Pozpátku"
 header-img: "img/about-bg.jpg"
 ---
-<h1>Lorem Ipsum</h1>
-<p>Tady něco bude.
-</p>
+Nápad obnovit u nás na vesnici ochotnický spolek se zrodil v hlavách dvou zapálených divadelnic, a to Jany Fialové a Kateřiny Kobáňové. Chtěly navázat na dobu rozkvětu této bohulibé činnosti v Říčanech, kterou postupem času vytlačily vymoženosti moderní techniky. 
+
+A tak od září 2012 se sešla hrstka nadšenců a zapálených lidí pro věc. Zprvu probíhaly zkoušky na Marečkově louce, poté se soubor přesunul do sálu Kulturního domu.
+
+Naší divadelní Můzou a tzv. srdcem divadla se stala paní Ludmila Franzová, která chtěla navázat na své účinkování jednak v prapůvodním ochotnickém spolku, jednak díky své dlouholeté mentorské a divadelní praxi, chtěla přilákat znovu mladou generaci k divadelním prknům.
+
+Spolek v dnešní době čítá zhruba 10 dospělých, kteří se aktivně podílejí na chodu divadla.
+
+Kulisy, rekvizity a vše k tomu potřebné si vyrábíme sami, svépomocí a hlavně díky dvěma velice manuálně zručným členkám.
+
+V dubnu 2013 jsme odehráli svou první premiéru, a to Čertovskou pohádku Jiřího Žáčka.  Tato pohádka byla velice vděčná, s dospělými hrály i děti, hra byla plná hezkých písniček, které nám složil hudební skladatel z Ostrovačic, pan Zdeněk Pololáník. Lidé, po rocích hladu, nás odměnili velkým potleskem a pro úspěch jsme museli představení přidávat.
+
+Celkem jsme ji reprízovali pětkrát.
+
+V prosinci 2013 jsme měli tu čest hrát pohádku na adventních trzích na Náměstí Svobody v Brně. Zkušenost to byla k nezaplacení. I když se hrálo ve ztížených podmínkách venku, v mrazivém ovzduší, kulisy jsme museli pracně přivézt, stálo to jednoznačně za to a všichni jsme si odnesli cenné zážitky do budoucna. Také jsme měli možnost mluvit a zpívat na porty, na přenosné mikrofony, což se nepoštěstí jen tak někde.
+
+Rok 2014, přesněji 20. červen, nám přinesl další premiéru, a to Dívčí válku od Františka Ringo Čecha. Představení, které humorně vyprávělo o prvním neúspěšném pokusu o emancipaci žen, tentokráte trvalo bezmála dvě hodiny, přestávku jsme vyplnili vtipným občerstvením dle postav ze hry. Myslím, že se hra opět povedla, o čemž svědčí fakt, že budeme opět reprízovat a to někdy na přelomu září, října. 
+
+2015 - O nejkrásnější princezně.
+
+2016 - JAK ŠVÉDOVÉ L.P. 1645 BRNO MARNĚ DOBÝVALI aneb Bylo nebylo.
+
+2016 - Děti hrají dětem - Setkání u Aničky (příběh nemocné dívky proložený známými pohádkami).
+
+2016 - Georges Feydeau: [Dámský krejčí](/hry/2020/05/09/damsky-krejci/), r. Kateřina Kobáňová. Účast na KP Divadelní Vsetín 2017.
+
+2018 - Petr Pospíšilík: [Lékařské tajemství](/hry/2020/05/10/lekarske-tajemstvi/), r. Petr Pospíšilík a Tereza Gazárková. Premiéra 15.dubna. Účast na KP Třešťské divadelní jaro 2019.
+
+2019 - Petr Pospíšilík: Vdavky princezny Katky
+
+Ráda bych apelovala na všechny, co mají divadlo rádi, ať už děti či dospělé, nebojte se, přijďte se na nás třebas jen podívat, a pokud budete chtít, můžete rozšířit náš hubeňoučký soubor  ...  budeme jen rádi. Jak se říká, žádný učený z nebe nespadl, vše se učíme za pochodu a na zkouškách je vždy kopec srandy.
+
+Náš profil v [Datábazi českého amatérského divadla](https://www.amaterskedivadlo.cz/main.php?data=soubor&id=38586).
