--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "Kontaktujte"
-description: "...nás."
+title: "Kontakt"
+description: "jak se s námi spojit"
 header-img: "img/contact-bg.jpg"
 ---
 <h1>Naše principálka</h1>
